--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ title:hover{
 }
     
 
-mode-select:hover{
+.mode-select:hover{
     cursor: pointer
 }
         
@@ -55,3 +55,101 @@ mode-select:hover{
     min-height: 92%;
     padding-bottom: 2rem;
 }
+
+.search-filter{
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 4rem;
+    position: relative;
+}
+    
+
+.search{
+    background-color: hsl(209, 23%, 22%);
+    width: 25rem;
+    height: 2rem;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    padding-left: 3rem;
+}
+    
+
+.search:focus{
+    outline: none;
+}
+        
+
+.search::placeholder{
+    color: #fff;
+}
+        
+
+.search-icon{
+    position: absolute;
+    left: 4.8rem;
+    top: 2.4rem;
+    color: #fff;
+}
+    
+
+.search-icon:hover{
+    cursor: pointer;
+}
+
+.filter{
+    width: 12rem;
+    background-color: hsl(209, 23%, 22%);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+    
+    
+.filter-tab{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+    height: 2rem;
+    cursor: pointer;
+}
+   
+
+.filter-tab:hover{
+
+    background-color: lighten(hsl(209, 23%, 22%), 20%);
+}
+
+.filter-options{
+    list-style: none;
+    color:  #fff;
+    width: 12rem;
+}
+    
+
+.filter-option{
+    padding-left: 1rem;
+    height: 1.5rem;
+    background-color: hsl(209, 23%, 22%);
+}
+    
+
+.filter-option:hover{
+        background-color: lighten(hsl(209, 23%, 22%), 20%);
+        cursor: pointer;
+    }
+        
+
+.countries{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    align-content: center;
+    grid-gap: 4rem;
+    width: 90%;
+    margin: auto;
+}
+
+       
