--- a/css/style.css
+++ b/css/style.css
@@ -1,155 +1,218 @@
-
-
-html{
-    font-size:14px;
+body {
+    background-color: rgb(250, 250, 250);
+    font-family: "Nunito Sans", sans-serif;
+    margin: 0;
+    color: rgb(17, 21, 23);
 }
-    
 
-body{
-    height: 100vh
-}
-    
-
-.header{
-    height: 8%;
-    background-color: hsl(209, 23%, 22%);
+body.dark {
+    background-color: rgb(32, 44, 55);
     color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 4rem
 }
-    
 
-.title
-{
-    font-weight: 800;
+body.dark header,
+body.dark .btn,
+body.dark .dropdown,
+body.dark .dropdown ul,
+body.dark .search,
+body.dark .card,
+body.dark .modal {
+    background-color: rgb(44, 60, 75);
+    color: #fff;
+    box-shadow: 0 1px 3px rgba(200, 200, 200, 0.10), 0 1px 2px rgba(200, 200, 200, 0.20);
 }
-   
 
-title:hover{
-    cursor: pointer;
+body.dark .modal span {
+    color: #fff;
 }
-       
 
-.mode-select{
+body.dark blue {
+    color: rgb(255, 149, 62);
     font-weight: 600;
+}
+
+body.dark .dropdown ul li {
+    color: #fff;
+}
+
+header {
+    background-color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    /* width: 100%;
+    height: 200px; */
+}
+
+img {
+    max-width: 100%;
+}
+
+.container {
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
     align-items: center;
-}
-    
-
-.mode-select:hover{
-    cursor: pointer
-}
-        
-
-.mode-icon{
-    margin-right: 1rem;
-}
-   
-
-.main{
-    background-color: hsl(209, 23%, 22%);
-    min-height: 92%;
-    padding-bottom: 2rem;
-}
-
-.search-filter{
-    display: flex;
     justify-content: space-between;
-    padding: 2rem 4rem;
+    max-width: 1440px;
+    padding: 30px;
+    margin: 0 auto;
+}
+
+h1 {
+    margin: 0;
+}
+
+.btn-toggle {
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 130px;
+}
+
+.btn-toggle .fas {
+    display: none;
+}
+
+body.dark .btn-toggle .fas {
+    display: inline-block;
+}
+
+body.dark .btn-toggle .far {
+    display: none;
+}
+
+.search {
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 15px;
+    padding: 25px;
+    min-width: 300px;
+    color: inherit;
+}
+
+.dropdown .fa-chevron-down {
+    margin-left: 10px;
+}
+
+.dropdown {
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 15px;
+    padding: 20px;
     position: relative;
 }
-    
 
-.search{
-    background-color: hsl(209, 23%, 22%);
-    width: 25rem;
-    height: 2rem;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    padding-left: 3rem;
-}
-    
-
-.search:focus{
-    outline: none;
-}
-        
-
-.search::placeholder{
-    color: #fff;
-}
-        
-
-.search-icon{
+.dropdown ul {
+    display: none;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    padding: 20px;
     position: absolute;
-    left: 4.8rem;
-    top: 2.4rem;
-    color: #fff;
+    top: 84%;
+    left: 0;
+    list-style-type: none;
+    width: 100%;
+    z-index: 3
 }
-    
 
-.search-icon:hover{
+.dropdown.open ul {
+    display: block;
+}
+
+.dropdown ul li {
+    margin: 10px 0;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.card {
+    outline: 1px solid rgb(100, 100, 100);
+}
+
+.country-header {
+    width: 300px;
+    height: auto;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.country-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     cursor: pointer;
+    margin: 20px 10px;
+    max-width: 300px;
+    overflow: hidden;
 }
 
-.filter{
-    width: 12rem;
-    background-color: hsl(209, 23%, 22%);
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.card-body {
+    padding: 30px;
 }
-    
-    
-.filter-tab{
-    display: flex;
+
+.card-body h2 {
+    margin-top: 0;
+}
+
+#countries {
     justify-content: space-between;
+}
+
+
+.modal {
+    margin: 0;
+    width: 100%;
+    /* outline: 1px solid black; */
+    display: none;
+    grid-template-columns: 2% 5% 1.5fr 2% 1fr 1% 1fr 5%;
+    grid-template-rows: 70px 50px 100px 100px 300px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    color: #000;
+}
+
+.modal p {
+    margin-top: 0.8rem;
+    /* color: #ffd700; */
+}
+
+.modal p span {
+    color: #0f0f0f;
+}
+
+.modal blue {
+    color: blue;
+    font-weight: 600;
+}
+
+#close {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: #fff;
+    border: 0;
+    border-radius: 4px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    display: flex;
     align-items: center;
-    padding: 0 1rem;
-    height: 2rem;
-    cursor: pointer;
+    justify-content: space-evenly;
+    font-size: 14px;
+    color: rgb(100, 100, 100);
+    margin-left: -20px;
+    align-self: start;
+    padding: 0.5em;
 }
-   
-
-.filter-tab:hover{
-
-    background-color: lighten(hsl(209, 23%, 22%), 20%);
-}
-
-.filter-options{
-    list-style: none;
-    color:  #fff;
-    width: 12rem;
-}
-    
-
-.filter-option{
-    padding-left: 1rem;
-    height: 1.5rem;
-    background-color: hsl(209, 23%, 22%);
-}
-    
-
-.filter-option:hover{
-        background-color: lighten(hsl(209, 23%, 22%), 20%);
-        cursor: pointer;
-    }
-        
-
-.countries{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-content: center;
-    align-content: center;
-    grid-gap: 4rem;
-    width: 90%;
-    margin: auto;
-}
-
-       
