--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,83 @@ body.dark .btn-toggle .far {
     align-self: start;
     padding: 0.5em;
 }
+/* img {
+     max-width: 100%;
+ } */
+ 
+ .image-div {
+    grid-column: 3/4;
+    grid-row: 3/6;
+    padding: 20px;
+    background-color: #f0f0f0;
+    max-height: 120%;
+}
+
+body.dark .image-div {
+    background-color: rgba(170, 170, 170, 0.5);
+}
+
+.image-div img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.modal-upper {
+    grid-column: 5/7;
+    grid-row: 3/4;
+}
+
+.modal-middle {
+    grid-column: 7/8;
+    grid-row: 3/4;
+}
+
+.border {
+    grid-column: 5/8;
+    grid-row: 4/6;
+    align-self: end;
+}
+
+.border p span {
+    display: inline-block;
+    margin: 5px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    padding: 3px 10px;
+}
+
+@media (max-width: 900px) {
+    #modal {
+        display: block;
+        padding-left: 50px;
+        overflow: scroll;
+    }
+    #close {
+        margin-top: 50px;
+    }
+    .image-div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 80%;
+    }
+    .modal p {
+        margin-top: 1em;
+        max-width: 80%;
+    }
+    .country-name {
+        margin-top: 2em;
+    }
+    .border {
+        margin-top: 1em;
+        display: flex;
+        flex-flow: column wrap;
+        align-items: flex-start;
+    }
+    #close {
+        margin-bottom: 50px;
+    }
+    #countries {
+        justify-content: center;
+    }
+}
