--- a/css/style.css
+++ b/css/style.css
@@ -1,298 +1,325 @@
-body {
-    background-color: rgb(250, 250, 250);
-    font-family: "Nunito Sans", sans-serif;
-    margin: 0;
-    color: rgb(17, 21, 23);
-}
 
-body.dark {
-    background-color: rgb(32, 44, 55);
-    color: #fff;
-}
+  
+ @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+ *,
+ *::before,
+ *::after {
+     box-sizing: border-box;
+ }
+ 
+ body {
+     background-color: rgb(250, 250, 250);
+     font-family: "Nunito Sans", sans-serif;
+     margin: 0;
+     color: rgb(17, 21, 23);
+ }
+ 
+ body.dark {
+     background-color: rgb(32, 44, 55);
+     color: #fff;
+ }
+ 
+ body.dark header,
+ body.dark .btn,
+ body.dark .dropdown,
+ body.dark .dropdown ul,
+ body.dark .search,
+ body.dark .card,
+ body.dark .modal {
+     background-color: rgb(44, 60, 75);
+     color: #fff;
+     box-shadow: 0 1px 3px rgba(200, 200, 200, 0.10), 0 1px 2px rgba(200, 200, 200, 0.20);
+ }
+ 
+ body.dark .modal span {
+     color: #fff;
+ }
+ 
+ body.dark blue {
+     color: rgb(255, 149, 62);
+     font-weight: 600;
+ }
+ 
+ body.dark .dropdown ul li {
+     color: #fff;
+ }
+ 
+ header {
+     background-color: #fff;
+     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+     /* width: 100%;
+     height: 200px; */
+ }
+ 
+ img {
+     max-width: 100%;
+ }
+ 
+ .container {
+     display: flex;
+     flex-wrap: wrap;
+     align-items: center;
+     justify-content: space-between;
+     max-width: 1440px;
+     padding: 30px;
+     margin: 0 auto;
+ }
+ 
+ h1 {
+     margin: 0;
+ }
 
-body.dark header,
-body.dark .btn,
-body.dark .dropdown,
-body.dark .dropdown ul,
-body.dark .search,
-body.dark .card,
-body.dark .modal {
-    background-color: rgb(44, 60, 75);
-    color: #fff;
-    box-shadow: 0 1px 3px rgba(200, 200, 200, 0.10), 0 1px 2px rgba(200, 200, 200, 0.20);
-}
+ 
+ .btn-toggle {
+     border: none;
+     cursor: pointer;
+     font-size: 16px;
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     width: 130px;
+     background: transparent;
 
-body.dark .modal span {
-    color: #fff;
-}
+ }
+ 
+ .btn-toggle .fas {
+     display: none;
+     color: #fff;
+ }
+ 
+ body.dark .btn-toggle .fas {
+     display: inline-block;
+     color: #fff !important;
+ }
+ 
+ body.dark .btn-toggle .far {
+     display: none;
+     color: #fff;
+ }
 
-body.dark blue {
-    color: rgb(255, 149, 62);
-    font-weight: 600;
-}
 
-body.dark .dropdown ul li {
-    color: #fff;
-}
+ .search {
+     border-radius: 4px;
+     border: none;
+     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+     font-family: "Nunito Sans", sans-serif;
+     font-size: 15px;
+     padding: 20px;
+     min-width: 300px;
+     color: inherit;
+ }
 
-header {
-    background-color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
-    /* width: 100%;
-    height: 200px; */
-}
+ 
+ .dropdown .fa-chevron-down {
+     margin-left: 10px;
+ }
+ 
+ .dropdown {
+     border-radius: 4px;
+     background-color: #fff;
+     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+     cursor: pointer;
+     font-family: inherit;
+     font-size: 15px;
+     padding: 15px;
+     position: relative;
+ }
+ 
+ .dropdown ul {
+     display: none;
+     border-radius: 4px;
+     background-color: #fff;
+     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+     padding: 20px;
+     position: absolute;
+     top: 84%;
+     left: 0;
+     list-style-type: none;
+     width: 100%;
+     z-index: 3
+ }
+ 
+ .dropdown.open ul {
+     display: block;
+ }
+ 
+ .dropdown ul li {
+     margin: 10px 0;
+     color: rgba(0, 0, 0, 0.7);
+ }
 
-img {
-    max-width: 100%;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1440px;
-    padding: 30px;
-    margin: 0 auto;
-}
-
-h1 {
-    margin: 0;
-}
-
-.btn-toggle {
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 130px;
-}
-
-.btn-toggle .fas {
-    display: none;
-}
-
-body.dark .btn-toggle .fas {
-    display: inline-block;
-}
-
-body.dark .btn-toggle .far {
-    display: none;
-}
-
-.search {
-    border-radius: 4px;
-    border: none;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 15px;
-    padding: 25px;
-    min-width: 300px;
-    color: inherit;
-}
-
-.dropdown .fa-chevron-down {
-    margin-left: 10px;
-}
-
-.dropdown {
-    border-radius: 4px;
-    background-color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
-    cursor: pointer;
-    font-family: inherit;
-    font-size: 15px;
-    padding: 20px;
-    position: relative;
-}
-
-.dropdown ul {
-    display: none;
-    border-radius: 4px;
-    background-color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
-    padding: 20px;
-    position: absolute;
-    top: 84%;
-    left: 0;
-    list-style-type: none;
-    width: 100%;
-    z-index: 3
-}
-
-.dropdown.open ul {
-    display: block;
-}
-
-.dropdown ul li {
-    margin: 10px 0;
-    color: rgba(0, 0, 0, 0.7);
-}
-
-.card {
-    outline: 1px solid rgb(100, 100, 100);
-}
-
-.country-header {
-    width: 300px;
-    height: auto;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-}
-
-.country-header img {
+ 
+ .card {
+     outline: 1px solid rgb(100, 100, 100);
+ }
+ 
+ .country-header {
+     width: 300px;
+     height: 170px;
+     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+ }
+ 
+ .country-header img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
-}
+    object-fit: cover;
+ }
+ 
+ .card {
+     background-color: #fff;
+     border-radius: 4px;
+     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+     cursor: pointer;
+     margin: 20px 10px;
+     width: 300px;
+     height: 400px;
+     overflow: hidden;
 
-.card {
-    background-color: #fff;
-    border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    cursor: pointer;
-    margin: 20px 10px;
-    max-width: 300px;
-    overflow: hidden;
-}
+ }
+ 
+ .card-body {
+     padding: 30px;
+ }
+ 
+ .card-body h2 {
+     margin-top: 0;
+ }
+ 
+ #countries {
+     justify-content: space-between;
+ }
 
-.card-body {
-    padding: 30px;
-}
+ 
+ .modal {
+     margin: 0;
+     width: 100%;
+     /* outline: 1px solid black; */
+     display: none;
+     grid-template-columns: 2% 5% 1.5fr 2% 1fr 1% 1fr 5%;
+     grid-template-rows: 70px 50px 100px 100px 300px;
+     position: fixed;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     background-color: #fff;
+     color: #000;
+ }
+ 
+ .modal p {
+     margin-top: 0.8rem;
+     /* color: #ffd700; */
+ }
+ 
+ .modal p span {
+     color: #0f0f0f;
+ }
+ 
+ .modal blue {
+     color: blue;
+     font-weight: 600;
+ }
+ 
+ #close {
+     grid-column: 2/3;
+     grid-row: 2/3;
+     background-color: #fff;
+     border: 0;
+     border-radius: 4px;
+     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+     display: flex;
+     align-items: center;
+     justify-content: space-evenly;
+     font-size: 14px;
+     color: rgb(100, 100, 100);
+     margin-left: -20px;
+     align-self: start;
+     padding: 0.5em;
+ }
+ 
+ #close i {
+     font-size: 20px;
+     /* color: #87cefa; */
+ }
 
-.card-body h2 {
-    margin-top: 0;
-}
-
-#countries {
-    justify-content: space-between;
-}
-
-
-.modal {
-    margin: 0;
-    width: 100%;
-    /* outline: 1px solid black; */
-    display: none;
-    grid-template-columns: 2% 5% 1.5fr 2% 1fr 1% 1fr 5%;
-    grid-template-rows: 70px 50px 100px 100px 300px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #fff;
-    color: #000;
-}
-
-.modal p {
-    margin-top: 0.8rem;
-    /* color: #ffd700; */
-}
-
-.modal p span {
-    color: #0f0f0f;
-}
-
-.modal blue {
-    color: blue;
-    font-weight: 600;
-}
-
-#close {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    background-color: #fff;
-    border: 0;
-    border-radius: 4px;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    font-size: 14px;
-    color: rgb(100, 100, 100);
-    margin-left: -20px;
-    align-self: start;
-    padding: 0.5em;
-}
-/* img {
-     max-width: 100%;
- } */
  
  .image-div {
-    grid-column: 3/4;
-    grid-row: 3/6;
-    padding: 20px;
-    background-color: #f0f0f0;
-    max-height: 120%;
-}
+     grid-column: 3/4;
+     grid-row: 3/6;
+     padding: 20px;
+     background-color: #f0f0f0;
+     max-height: 120%;
+ }
+ 
+ body.dark .image-div {
+     background-color: rgba(170, 170, 170, 0.5);
+ }
+ 
+ .image-div img {
+     width: 100%;
+     height: 100%;
+     object-fit: contain;
+ }
+ 
+ .modal-upper {
+     grid-column: 5/7;
+     grid-row: 3/4;
+ }
+ 
+ .modal-middle {
+     grid-column: 7/8;
+     grid-row: 3/4;
+ }
+ 
+ .border {
+     grid-column: 5/8;
+     grid-row: 4/6;
+     align-self: end;
+ }
+ 
+ .border p span {
+     display: inline-block;
+     margin: 5px;
+     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+     padding: 3px 10px;
+ }
+ 
+ @media (max-width: 900px) {
+     #modal {
+         display: block;
+         padding-left: 50px;
+         overflow: scroll;
+     }
+     #close {
+         margin-top: 50px;
+     }
+     .image-div {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         max-width: 80%;
+     }
+     .modal p {
+         margin-top: 1em;
+         max-width: 80%;
+     }
+     .country-name {
+         margin-top: 2em;
+     }
+     .border {
+         margin-top: 1em;
+         display: flex;
+         flex-flow: column wrap;
+         align-items: flex-start;
+     }
+     #close {
+         margin-bottom: 50px;
+     }
+     #countries {
+         justify-content: center;
+     }
+     .dropdown{
+         margin-top: 15px;
+     }
+ }
 
-body.dark .image-div {
-    background-color: rgba(170, 170, 170, 0.5);
-}
-
-.image-div img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.modal-upper {
-    grid-column: 5/7;
-    grid-row: 3/4;
-}
-
-.modal-middle {
-    grid-column: 7/8;
-    grid-row: 3/4;
-}
-
-.border {
-    grid-column: 5/8;
-    grid-row: 4/6;
-    align-self: end;
-}
-
-.border p span {
-    display: inline-block;
-    margin: 5px;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    padding: 3px 10px;
-}
-
-@media (max-width: 900px) {
-    #modal {
-        display: block;
-        padding-left: 50px;
-        overflow: scroll;
-    }
-    #close {
-        margin-top: 50px;
-    }
-    .image-div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        max-width: 80%;
-    }
-    .modal p {
-        margin-top: 1em;
-        max-width: 80%;
-    }
-    .country-name {
-        margin-top: 2em;
-    }
-    .border {
-        margin-top: 1em;
-        display: flex;
-        flex-flow: column wrap;
-        align-items: flex-start;
-    }
-    #close {
-        margin-bottom: 50px;
-    }
-    #countries {
-        justify-content: center;
-    }
-}
