--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
  body.dark {
      background-color: rgb(32, 44, 55);
      color: #fff;
+     font-family: "Nunito Sans", sans-serif;
  }
  
  body.dark header,
@@ -30,6 +31,7 @@
      color: #fff;
      box-shadow: 0 1px 3px rgba(200, 200, 200, 0.10), 0 1px 2px rgba(200, 200, 200, 0.20);
  }
+ 
  
  body.dark .modal span {
      color: #fff;
@@ -65,9 +67,15 @@
      margin: 0 auto;
  }
  
- h1 {
-     margin: 0;
+ .title{
+    font-weight: 800;
  }
+ 
+
+ title:hover{
+    cursor: text;
+ }
+     
 
  
  .btn-toggle {
@@ -96,7 +104,6 @@
      display: none;
      color: #fff;
  }
-
 
  .search {
      border-radius: 4px;
@@ -319,7 +326,8 @@
          justify-content: center;
      }
      .dropdown{
-         margin-top: 15px;
+         margin-top: 25px;
      }
+     
  }
 
