--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,9 @@
  
  .title{
     font-weight: 800;
- }
- 
-
- title:hover{
     cursor: text;
  }
+ 
      
 
  
@@ -156,10 +153,6 @@
  }
 
  
- .card {
-     outline: 1px solid rgb(100, 100, 100);
- }
- 
  .country-header {
      width: 300px;
      height: 170px;
@@ -174,15 +167,16 @@
  
  .card {
      background-color: #fff;
-     border-radius: 4px;
-     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+     border-radius: 5px;
+     border: none;
+     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgb(238, 231, 231);
      cursor: pointer;
      margin: 20px 10px;
      width: 300px;
      height: 400px;
      overflow: hidden;
-
  }
+
  
  .card-body {
      padding: 30px;
